# Potodo

./: .all-contributorsrc  .gitignore  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ponicode.yml  python-publish.yml  tests.yml
potodo/: __init__.py  __main__.py  _cache.py  _github.py  _interactive.py  _po_file.py  _utils.py  arguments_handling.py  cache.py  forge_api.py  gitea.py  github.py  ignore.py  interactive.py  json.py  logging.py  po_file.py  potodo.py
potodo/utils/: arguments_handling.py  logging.py
tests/: conftest.py  test_exclude.py  test_potodo.py  test_potodo_args_errors.py  test_potodo_default_args.py  test_potodov2.py
tests/fixtures/python-docs-fr/: bugs.po  obsolete.po
tests/fixtures/repository/: file1.po  file2.po
tests/fixtures/repository/excluded/: file4.po
tests/fixtures/repository/folder/: excluded.po
