[metadata]
name = potodo
version = attr: potodo.__version__
description = List .po files to be translated.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jules Lasne
author_email = jules.lasne@gmail.com
url = https://github.com/afpy/potodo
keywords = potodo
license = MIT License
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
packages = potodo
zip_safe = False
include_package_data = True
python_requires = >= 3.6
install_requires =
    gitignore-parser
    polib
    requests
    simple-term-menu

[options.entry_points]
console_scripts = potodo=potodo.potodo:main
